--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Created by Lu</p>
         <img class="portrait" src="/img/spy.jpeg">
     </div>
 
